fixed font sizing on mobile

--- a/docs/styles/button.css
+++ b/docs/styles/button.css
@@ -1,10 +1,11 @@
 .btn {
   margin-left: 10px;
-  padding: 5px 7px 5px 7px;
+  font-size: 24px;
   cursor: pointer;
   background: none;
   border: 1px solid #454F5B;
-  border-radius: 2px;
+  border-radius: 5px;
+  padding: 7.5% 12.5%;
   color: #454F5B;
 }
 
@@ -16,6 +17,7 @@
   color: #108043;
   background-color: #BBE5B3;
   border: none;
+  margin: 0;
 }
 
 .btn-cancel {
@@ -29,5 +31,20 @@
 
 .btn-event {
   padding: 5% 10% 5% 10%;
-  font-size: 1.25em;
+  font-size: 30px;
+}
+
+@media only screen and (min-width: 1024px) {
+
+  .btn {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 5px 7px 5px 7px;
+    border-radius: 2px;
+  }
+
+  .btn-event {
+    padding: 5% 10% 5% 10%;
+    font-size: 18px;
+  }
 }
