--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  margin-left: 15px;
+  margin-left: 27px;
   font-weight: 500;
   font-size: 27px;
   line-height: 36px;
@@ -25,7 +25,7 @@ h1 {
 }
 
 h3 {
-  font-size: 21px;
+  font-size: 27px;
   line-height: 28px;
   font-weight: 400;
   color: #212B36;
@@ -56,6 +56,10 @@ h3 {
   align-items: center;
 }
 
+li {
+  font-size: 2em;
+}
+
 .listItem {
   width: 90%;
   display: flex;
@@ -63,6 +67,7 @@ h3 {
   justify-content: space-between;
   align-items: center;
   list-style-position: inside;
+  font-size: 24px;
 }
 
 .nominationItem {
@@ -74,7 +79,7 @@ h3 {
   margin: 10px;
   padding: 2.5%;
   border-radius: 5px;
-  box-shadow:0 0 15px 4px rgba(0.5,0,0,0.06);
+  box-shadow: 0 0 15px 4px rgba(0.5,0,0,0.06);
   background-color: #F9FAFB;
 }
 
@@ -102,6 +107,10 @@ h3 {
     line-height: 32px;
   }
 
+  li {
+    font-size: 1em;
+  }
+
   .header {
     width: 70%;
     margin-bottom: 0.5%;
@@ -111,6 +120,7 @@ h3 {
     width: 70%;
     flex-direction: row;
     justify-content: space-around;
+    align-items: flex-start;
   }
 
   .results-list {
@@ -121,5 +131,9 @@ h3 {
   .nominations-list {
     width: 50%;
     margin-right: 0;
+  }
+
+  .listItem {
+    font-size: 15px;
   }
 }
