--- a/docs/styles/popup.css
+++ b/docs/styles/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  width: 50%;
+  width: 70%;
   padding: 5%;
   border-radius: 5px;
   background-color: white;
@@ -12,8 +12,9 @@
 }
 
 .popup p {
-  font-size: 1.25em;
+  font-size: 24px;
   margin-bottom: 5%;
+  text-align: center;
 }
 
 .hidden {
@@ -21,15 +22,16 @@
 }
 
 .btn-container {
-  width: 40%;
+  width: 80%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
 h2 {
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 35px;
   font-weight: 500;
+  text-align: center;
   margin-bottom: 0;
 }
 
@@ -38,5 +40,19 @@ h2 {
   h2 {
     font-size: 28px;
     line-height: 32px;
+  }
+
+  .popup {
+    padding: 5%;
+    width: 50%;
+  }
+
+  .popup p {
+    font-size: 1.25em;
+    margin-bottom: 5%;
+  }
+
+  .btn-container {
+    width: 50%;
   }
 }
